--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10329,6 +10329,7 @@ readers do not read off random characters that represent icons */
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
   --bs-lightgrey: #dddddd;
+  --bs-orangeux: #D0A45E;
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -10338,6 +10339,7 @@ readers do not read off random characters that represent icons */
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
   --bs-lightgrey-rgb: 221, 221, 221;
+  --bs-orangeux-rgb: 208, 164, 94;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
@@ -13247,6 +13249,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #dddddd;
 }
 
+.btn-orangeux {
+  --bs-btn-color: #000;
+  --bs-btn-bg: #D0A45E;
+  --bs-btn-border-color: #D0A45E;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #d7b276;
+  --bs-btn-hover-border-color: #d5ad6e;
+  --bs-btn-focus-shadow-rgb: 177, 139, 80;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #d9b67e;
+  --bs-btn-active-border-color: #d5ad6e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #000;
+  --bs-btn-disabled-bg: #D0A45E;
+  --bs-btn-disabled-border-color: #D0A45E;
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -13397,6 +13416,23 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #dddddd;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #dddddd;
+  --bs-gradient: none;
+}
+
+.btn-outline-orangeux {
+  --bs-btn-color: #D0A45E;
+  --bs-btn-border-color: #D0A45E;
+  --bs-btn-hover-color: #000;
+  --bs-btn-hover-bg: #D0A45E;
+  --bs-btn-hover-border-color: #D0A45E;
+  --bs-btn-focus-shadow-rgb: 208, 164, 94;
+  --bs-btn-active-color: #000;
+  --bs-btn-active-bg: #D0A45E;
+  --bs-btn-active-border-color: #D0A45E;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #D0A45E;
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: #D0A45E;
   --bs-gradient: none;
 }
 
@@ -15021,6 +15057,15 @@ textarea.form-control-lg {
   color: #464646;
 }
 
+.alert-orangeux {
+  --bs-alert-color: #7d6238;
+  --bs-alert-bg: #f6eddf;
+  --bs-alert-border-color: #f1e4cf;
+}
+.alert-orangeux .alert-link {
+  color: #644e2d;
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -15437,6 +15482,20 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #585858;
   border-color: #585858;
+}
+
+.list-group-item-orangeux {
+  color: #7d6238;
+  background-color: #f6eddf;
+}
+.list-group-item-orangeux.list-group-item-action:hover, .list-group-item-orangeux.list-group-item-action:focus {
+  color: #7d6238;
+  background-color: #ddd5c9;
+}
+.list-group-item-orangeux.list-group-item-action.active {
+  color: #fff;
+  background-color: #7d6238;
+  border-color: #7d6238;
 }
 
 .btn-close {
@@ -17000,6 +17059,11 @@ textarea.form-control-lg {
   background-color: RGBA(221, 221, 221, var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-orangeux {
+  color: #000 !important;
+  background-color: RGBA(208, 164, 94, var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: #0d6efd !important;
 }
@@ -17061,6 +17125,13 @@ textarea.form-control-lg {
 }
 .link-lightgrey:hover, .link-lightgrey:focus {
   color: #e4e4e4 !important;
+}
+
+.link-orangeux {
+  color: #D0A45E !important;
+}
+.link-orangeux:hover, .link-orangeux:focus {
+  color: #d9b67e !important;
 }
 
 .ratio {
@@ -17527,6 +17598,11 @@ textarea.form-control-lg {
 .border-lightgrey {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-lightgrey-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-orangeux {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-orangeux-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-white {
@@ -18396,6 +18472,11 @@ textarea.form-control-lg {
   color: rgba(var(--bs-lightgrey-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-orangeux {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-orangeux-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -18490,6 +18571,11 @@ textarea.form-control-lg {
 .bg-lightgrey {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-lightgrey-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-orangeux {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-orangeux-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
@@ -21155,6 +21241,13 @@ textarea.form-control-lg {
 .topnav {
   overflow: hidden;
   background-color: #333;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.topnav h1, .topnav .h1 {
+  color: white;
 }
 
 .topnav a {
@@ -21162,7 +21255,6 @@ textarea.form-control-lg {
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
-  font-size: 17px;
 }
 
 .topnav a:hover {
@@ -21174,8 +21266,20 @@ textarea.form-control-lg {
   display: none;
 }
 
+.topnav button {
+  border-radius: 25px;
+  background: transparent;
+  color: white;
+  border: 2px solid #D0A45E;
+  height: 40px;
+  padding: 0px 10px 0px 10px;
+}
+
 @media screen and (max-width: 600px) {
   .topnav a:not(:first-child) {
+    display: none;
+  }
+  .topnav button {
     display: none;
   }
   .topnav a.icon {
