--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -2,7 +2,7 @@
 @import "../../node_modules/bootstrap/scss/_variables.scss";
 
 // COLORS
-$custom-colors: ("lightgrey": #dddddd);
+$custom-colors: ("lightgrey": #dddddd, "orangeux": #D0A45E);
 
 // Merge the maps
 $theme-colors: map-merge($theme-colors, $custom-colors);
