--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21238,9 +21238,27 @@ textarea.form-control-lg {
   box-sizing: border-box;
 }
 
+header {
+  position: relative;
+}
+
+header::before {
+  content: "";
+  position: absolute;
+  background-image: url("../../../public/img/hero-bg.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 720px;
+  filter: brightness(50%);
+  top: 0;
+  left: 0;
+}
+
 .topnav {
+  position: relative;
   overflow: hidden;
-  background-color: #333;
+  background-color: rgba(0, 0, 0, 0.608);
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -21258,8 +21276,7 @@ textarea.form-control-lg {
 }
 
 .topnav a:hover {
-  background-color: #ddd;
-  color: black;
+  color: #D0A45E;
 }
 
 .topnav .icon {
@@ -21272,22 +21289,28 @@ textarea.form-control-lg {
   color: white;
   border: 2px solid #D0A45E;
   height: 40px;
-  padding: 0px 10px 0px 10px;
+  padding: 0px 20px 0px 20px;
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(:first-child) {
+.topnav button:hover {
+  background-color: #D0A45E;
+}
+
+@media screen and (max-width: 960px) {
+  .topnav a {
+    display: none;
+  }
+  .topnav h1, .topnav .h1 {
     display: none;
   }
   .topnav button {
     display: none;
   }
   .topnav a.icon {
-    float: right;
     display: block;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
   .topnav.responsive {
     position: relative;
   }
@@ -21300,6 +21323,10 @@ textarea.form-control-lg {
     float: none;
     display: block;
     text-align: left;
+  }
+  .topnav.responsive button {
+    float: none;
+    display: block;
   }
 }
 
