--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -5,9 +5,27 @@ $orangeux: #D0A45E;
     box-sizing: border-box;
 }
 
+header {
+    position: relative;
+}
+
+header::before {
+    content: '';
+    position: absolute;
+    background-image: url('../../../public/img/hero-bg.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    height: 720px;
+    filter: brightness(50%);
+    top: 0;
+    left: 0;
+}
+
 .topnav {
+    position: relative;
     overflow: hidden;
-    background-color: #333;
+    background-color: rgba(0, 0, 0, 0.608);
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -25,8 +43,7 @@ $orangeux: #D0A45E;
 }
 
 .topnav a:hover {
-    background-color: #ddd;
-    color: black;
+    color : $orangeux;
 }
 
 .topnav .icon {
@@ -39,13 +56,21 @@ $orangeux: #D0A45E;
     color: white;
     border: 2px solid $orangeux;
     height: 40px;
-    padding: 0px 10px 0px 10px;
+    padding: 0px 20px 0px 20px;
+}
+
+.topnav button:hover {
+    background-color: $orangeux;
 }
 
 // Media Queries
 // Navbar
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {
+@media screen and (max-width: 960px) {
+    .topnav a {
+        display: none;
+    }
+
+    .topnav h1 {
         display: none;
     }
 
@@ -54,12 +79,11 @@ $orangeux: #D0A45E;
     }
 
     .topnav a.icon {
-        float: right;
         display: block;
     }
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 960px) {
     .topnav.responsive {
         position: relative;
     }
@@ -74,5 +98,10 @@ $orangeux: #D0A45E;
         float: none;
         display: block;
         text-align: left;
+    }
+
+    .topnav.responsive button {
+        float:  none;
+        display: block;
     }
 }
