--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -22,6 +22,12 @@ header::before {
     left: 0;
 }
 
+.divHeader {
+    position: relative;
+}
+
+
+
 .topnav {
     position: relative;
     overflow: hidden;
