--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -5,6 +5,10 @@ $orangeux: #D0A45E;
     box-sizing: border-box;
 }
 
+.container {
+    width: 1320px;
+}
+
 header {
     position: relative;
 }
@@ -18,23 +22,41 @@ header::before {
     width: 100%;
     height: 720px;
     filter: brightness(50%);
-    top: 0;
-    left: 0;
+}
+
+#firstDiv {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .divHeader {
     position: relative;
 }
 
+.divHeader span {
+    color: white;
+}
 
+.divHeader span i {
+    color: $orangeux;
+}
+
+.spanHeader:hover {
+    color: $orangeux;
+}
 
 .topnav {
+    padding-left: 38px;
+    padding-right: 25px;
     position: relative;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.608);
     display: flex;
     justify-content: space-around;
     align-items: center;
+    height: 80px;
 }
 
 .topnav h1 {
@@ -56,7 +78,7 @@ header::before {
     display: none;
 }
 
-.topnav button {
+.button {
     border-radius: 25px;
     background: transparent;
     color: white;
@@ -65,8 +87,17 @@ header::before {
     padding: 0px 20px 0px 20px;
 }
 
-.topnav button:hover {
+.button:hover {
     background-color: $orangeux;
+}
+
+#div3 {
+    position: relative;
+    color: white;
+}
+
+#div3 h1 span {
+    color: $orangeux;
 }
 
 // Media Queries
