--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -1,4 +1,5 @@
 $orangeux: #D0A45E;
+
 * {
     margin: 0;
     padding: 0;
@@ -71,7 +72,7 @@ header::before {
 }
 
 .topnav a:hover {
-    color : $orangeux;
+    color: $orangeux;
 }
 
 .topnav .icon {
@@ -129,15 +130,15 @@ header::before {
 }
 
 @keyframes pulse {
-	0% {
-		transform: scale(0.95);
-		box-shadow: 0 0 0 0 rgba(208, 164, 94, 0.7);
-	}
+    0% {
+        transform: scale(0.95);
+        box-shadow: 0 0 0 0 rgba(208, 164, 94, 0.7);
+    }
 
-	100% {
-		transform: scale(1);
-		box-shadow: 0 0 0 15px rgba(208, 164, 94, 0);
-	}
+    100% {
+        transform: scale(1);
+        box-shadow: 0 0 0 15px rgba(208, 164, 94, 0);
+    }
 }
 
 #pulseButton:hover i {
@@ -148,12 +149,51 @@ header::before {
     0% {
         transform: scale(1);
     }
+
     80% {
         transform: scale(15);
     }
+
     100% {
-        color: #D0A45E;;
+        color: #D0A45E;
+        ;
     }
+}
+
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
 }
 
 // Media Queries
@@ -194,7 +234,7 @@ header::before {
     }
 
     .topnav.responsive button {
-        float:  none;
+        float: none;
         display: block;
     }
 }
