--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21406,6 +21406,7 @@ header::before {
   padding: 20px;
   border: 1px solid #888;
   width: 80%;
+  display: flex;
 }
 
 .close {
@@ -21420,6 +21421,10 @@ header::before {
   color: #000;
   text-decoration: none;
   cursor: pointer;
+}
+
+.modalBtn {
+  border-radius: 25px;
 }
 
 @media screen and (max-width: 960px) {
