--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -98,23 +98,11 @@ header::before {
     position: relative;
     color: white;
     padding-top: 15%;
+    gap: 45%;
 }
 
 #div3 h1 span {
     color: $orangeux;
-}
-
-#galere {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100px;
-    width: 100px;
-    margin-left: 45%;
-    margin-top: 2%;
-    background-color: #d0a45e80;
-    border-radius: 50%;
-    overflow: hidden;
 }
 
 #pulseButton {
@@ -201,9 +189,87 @@ header::before {
     border-radius: 25px;
 }
 
+.play-btn {
+    width: 94px;
+    height: 94px;
+    background: radial-gradient(#cda45e 50%, rgba(205, 164, 94, 0.4) 52%);
+    border-radius: 50%;
+    display: block;
+    position: relative;
+    overflow: hidden;
+}
+
+.play-btn::before {
+    content: "";
+    position: absolute;
+    width: 120px;
+    height: 120px;
+    animation-delay: 0s;
+    animation: pulsate-btn 2s;
+    animation-direction: forwards;
+    animation-iteration-count: infinite;
+    animation-timing-function: steps;
+    opacity: 1;
+    border-radius: 50%;
+    border: 5px solid rgba(205, 164, 94, 0.7);
+    top: -15%;
+    left: -15%;
+    background: rgba(198, 16, 0, 0);
+}
+
+.play-btn::after {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-40%) translateY(-50%);
+    width: 0;
+    height: 0;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid #fff;
+    z-index: 100;
+    transition: all 400ms cubic-bezier(0.55, 0.055, 0.675, 0.19);
+}
+
+.play-btn:hover::after {
+    border-left: 15px solid #cda45e;
+    transform: scale(20);
+}
+
+.play-btn:hover::before {
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translateX(-40%) translateY(-50%);
+    width: 0;
+    height: 0;
+    border: none;
+    border-top: 10px solid transparent;
+    border-bottom: 10px solid transparent;
+    border-left: 15px solid #fff;
+    z-index: 200;
+    animation: none;
+    border-radius: 0;
+}
+
+@keyframes pulsate-btn {
+    0% {
+        transform: scale(0.6, 0.6);
+        opacity: 1;
+    }
+
+    100% {
+        transform: scale(1, 1);
+        opacity: 0;
+    }
+}
+
+
 // Media Queries
 // Navbar
-@media screen and (max-width: 960px) {
+@media screen and (max-width: 768px) {
     .topnav a {
         display: none;
     }
@@ -219,9 +285,7 @@ header::before {
     .topnav a.icon {
         display: block;
     }
-}
 
-@media screen and (max-width: 960px) {
     .topnav.responsive {
         position: relative;
     }
@@ -243,3 +307,5 @@ header::before {
         display: block;
     }
 }
+
+@media screen and (max-width: 1024px) {}
