--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -182,6 +182,37 @@ header::before {
     }
 }
 
+// Modal Connexion
+.modal-content-One {
+    background-color: white;
+    margin: auto;
+    padding: auto;
+    border: 1px solid #888;
+    border-radius: 10px;
+    width: 40%;
+    text-align: center;
+    height: 500px;
+}
+
+.closeOne {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.closeOne:hover,
+.closeOne:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modalBtn {
+    border-radius: 25px;
+}
+
+//Modal Video
 .modal {
     display: none;
     position: fixed;
@@ -197,16 +228,15 @@ header::before {
 }
 
 .modal-content {
-    background-color: #fefefe;
+    background-color: black;
     margin: auto;
     padding: 20px;
     border: 1px solid #888;
     width: 80%;
-    display: flex;
 }
 
 .close {
-    color: #aaaaaa;
+    color: white;
     float: right;
     font-size: 28px;
     font-weight: bold;
@@ -214,13 +244,9 @@ header::before {
 
 .close:hover,
 .close:focus {
-    color: #000;
+    color: #aaaaaa;
     text-decoration: none;
     cursor: pointer;
-}
-
-.modalBtn {
-    border-radius: 25px;
 }
 
 // Media Queries
