--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21249,11 +21249,10 @@ header {
 header::before {
   content: "";
   position: absolute;
-  background-image: url("../../../public/img/hero-bg.jpg");
-  background-repeat: no-repeat;
+  background: url("../../../public/img/hero-bg.jpg") top center;
   background-size: cover;
   width: 100%;
-  height: 720px;
+  height: 100vh;
   filter: brightness(50%);
 }
 
@@ -21330,6 +21329,7 @@ header::before {
   position: relative;
   color: white;
   padding-top: 15%;
+  padding-bottom: 16.8%;
   gap: 45%;
 }
 
@@ -21459,7 +21459,6 @@ header::before {
   background-color: black;
   margin: auto;
   padding: 20px;
-  border: 1px solid #888;
   width: 80%;
 }
 
@@ -21508,6 +21507,11 @@ header::before {
     display: block;
   }
 }
+#about {
+  background-image: url("../../../public/img/about-bg.jpg");
+  color: white;
+}
+
 .container {
   width: 1320px;
 }
