--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -17,11 +17,10 @@ header {
 header::before {
     content: '';
     position: absolute;
-    background-image: url('../../../public/img/hero-bg.jpg');
-    background-repeat: no-repeat;
+    background: url('../../../public/img/hero-bg.jpg') top center;
     background-size: cover;
     width: 100%;
-    height: 720px;
+    height: 100vh;
     filter: brightness(50%);
 }
 
@@ -98,6 +97,7 @@ header::before {
     position: relative;
     color: white;
     padding-top: 15%;
+    padding-bottom: 16.8%;
     gap: 45%;
 }
 
@@ -231,7 +231,6 @@ header::before {
     background-color: black;
     margin: auto;
     padding: 20px;
-    border: 1px solid #888;
     width: 80%;
 }
 
