--- a/src/sass/modules/_style.scss
+++ b/src/sass/modules/_style.scss
@@ -1,5 +1,5 @@
 @import './_navbar';
 @import './_header';
-@import './_section';
+@import './_about';
 @import './_footer';
 @import './_bootstrap';
