--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -1,4 +1,74 @@
 #about {
-    background-image: url('../../../public/img/about-bg.jpg');
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../../public/img/about-bg.jpg');
     color: white;
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
+
+#leftAbout {
+    width: 70%;
+}
+
+#leftAbout li {
+    position: relative;
+    left: -33px;
+}
+
+#leftAbout .fa-circle-check {
+    color: $orangeux;
+}
+
+#imgAbout {
+    transition: all 0.5s ease 0s;
+    position: relative;
+}
+
+#rightAbout img{
+    margin-left: 5%;
+    width: 90%;
+    object-fit: cover;
+    border-width: 4px;
+    border-style: solid;
+    border-color: rgba(255, 255, 255, 0.2);
+    position: relative;
+}
+
+#imgAbout:hover {
+    transform: scale(1.03);
+}
+
+#imgAbout::before{
+    position: absolute;
+    left: 55px;
+    top: 20px;
+    width: 60px;
+    height: 60px;
+    z-index: 1;
+    content: "";
+    border-left: 5px solid rgb(205, 164, 94);
+    border-top: 5px solid rgb(205, 164, 94);
+    transition: all 0.5s ease 0s;
+}
+
+#imgAbout::after {
+    position: absolute;
+    right: 55px;
+    bottom: 20px;
+    width: 60px;
+    height: 60px;
+    z-index: 2;
+    content: "";
+    border-right: 5px solid rgb(205, 164, 94);
+    border-bottom: 5px solid rgb(205, 164, 94);
+    transition: all 0.5s ease 0s;
+}
+
+#imgAbout:hover::after {
+    right: 45px;
+    bottom: 10px;
+}
+
+#imgAbout:hover::before {
+    left: 45px;
+    top: 10px;
 }
