--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,16 @@
 @charset "UTF-8";
+@font-face {
+  font-family: "Poppins";
+  src: url("../../public/fonts/Poppins.ttf");
+}
+@font-face {
+  font-family: "Playfair Display";
+  src: url("../../public/fonts/PlayfairDisplay.ttf");
+}
+@font-face {
+  font-family: "Open Sans";
+  src: url("../../public/fonts/OpenSans.ttf");
+}
 /*!
  * Font Awesome Free 6.2.1 by @fontawesome - https://fontawesome.com
  * License - https://fontawesome.com/license/free (Icons: CC BY 4.0, Fonts: SIL OFL 1.1, Code: MIT License)
@@ -21238,6 +21250,24 @@ textarea.form-control-lg {
   box-sizing: border-box;
 }
 
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+h1, .h1,
+h2,
+.h2,
+h3,
+.h3,
+h4,
+.h4,
+h5,
+.h5,
+h6,
+.h6 {
+  font-family: "Playfair Display", serif;
+}
+
 .container {
   width: 1320px;
 }
@@ -21252,7 +21282,7 @@ header::before {
   background: url("../../../public/img/hero-bg.jpg") top center;
   background-size: cover;
   width: 100%;
-  height: 100vh;
+  height: 101vh;
   filter: brightness(50%);
 }
 
@@ -21330,11 +21360,24 @@ header::before {
   color: white;
   padding-top: 15%;
   padding-bottom: 16.8%;
-  gap: 45%;
+  gap: 35%;
+}
+
+#div3 h1, #div3 .h1 {
+  font-family: "Poppins", sans-serif;
+  margin: 0;
+  font-size: 48px;
+  font-weight: bolder;
+  line-height: 56px;
 }
 
 #div3 h1 span, #div3 .h1 span {
   color: #D0A45E;
+}
+
+#div3 p {
+  font-family: "Playfair Display";
+  font-size: larger;
 }
 
 .play-btn {
@@ -21508,6 +21551,7 @@ header::before {
   }
 }
 #about {
+  background-attachment: fixed;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../public/img/about-bg.jpg");
   color: white;
   padding-top: 5%;
@@ -22941,6 +22985,79 @@ header::before {
   .mx-xl-auto {
     margin-left: auto !important;
   }
+}
+#whyUs {
+  padding-top: 3%;
+  background-color: black;
+  color: white;
+  padding-bottom: 3%;
+}
+
+.title {
+  padding-bottom: 40px;
+}
+
+#whyUs .title p {
+  font-size: 36px;
+  font-weight: 700;
+  font-family: "Playfair Display", serif;
+  color: rgb(205, 164, 94);
+  margin: 0px;
+}
+
+#whyUs .title h2, #whyUs .title .h2 {
+  font-size: 14px;
+  font-weight: 500;
+  line-height: 1px;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  color: rgb(170, 170, 170);
+  font-family: "Poppins", sans-serif;
+  padding: 0px;
+  margin: 0px 0px 5px;
+}
+
+#whyUs .title h2::after, #whyUs .title .h2::after {
+  content: "";
+  width: 120px;
+  height: 1px;
+  display: inline-block;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 4px 10px;
+}
+
+#groupette {
+  display: flex;
+  justify-content: space-between;
+}
+
+.triplette {
+  padding: 2%;
+  background: #1a1814;
+  width: 32%;
+  transition: all ease-in-out 0.3s;
+}
+
+.triplette span {
+  display: block;
+  font-size: 28px;
+  font-weight: 700;
+  color: #cda45e;
+}
+
+.triplette h4, .triplette .h4 {
+  font-size: 24px;
+  font-weight: 600;
+  padding: 0;
+  margin: 20px 0;
+  color: rgba(255, 255, 255, 0.8);
+}
+
+.triplette p {
+  color: #aaaaaa;
+  font-size: 15px;
+  margin: 0;
+  padding: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
