--- a/src/sass/modules/_about.scss
+++ b/src/sass/modules/_about.scss
@@ -1,4 +1,5 @@
 #about {
+    background-attachment: fixed;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../../public/img/about-bg.jpg');
     color: white;
     padding-top: 5%;
