--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -6,6 +6,19 @@ $orangeux: #D0A45E;
     box-sizing: border-box;
 }
 
+body {
+    font-family: "Open Sans", sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: "Playfair Display", serif;
+}
+
 .container {
     width: 1320px;
 }
@@ -20,7 +33,7 @@ header::before {
     background: url('../../../public/img/hero-bg.jpg') top center;
     background-size: cover;
     width: 100%;
-    height: 100vh;
+    height: 101vh;
     filter: brightness(50%);
 }
 
@@ -98,11 +111,24 @@ header::before {
     color: white;
     padding-top: 15%;
     padding-bottom: 16.8%;
-    gap: 45%;
+    gap: 35%;
+}
+
+#div3 h1 {
+    font-family: 'Poppins', sans-serif;
+    margin: 0;
+    font-size: 48px;
+    font-weight: bolder;
+    line-height: 56px;
 }
 
 #div3 h1 span {
     color: $orangeux;
+}
+
+#div3 p {
+    font-family: "Playfair Display";
+    font-size: larger;
 }
 
 .play-btn {
