--- a/src/sass/modules/_style.scss
+++ b/src/sass/modules/_style.scss
@@ -1,5 +1,6 @@
-@import './_navbar';
+@import './_menu';
 @import './_header';
 @import './_about';
 @import './_footer';
 @import './_bootstrap';
+@import './_whyUs.scss';
