--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22987,10 +22987,10 @@ header::before {
   }
 }
 #whyUs {
-  padding-top: 3%;
+  padding-top: 4%;
   background-color: black;
   color: white;
-  padding-bottom: 3%;
+  padding-bottom: 4%;
 }
 
 .title {
@@ -23035,7 +23035,6 @@ header::before {
   padding: 2%;
   background: #1a1814;
   width: 32%;
-  transition: all ease-in-out 0.3s;
 }
 
 .triplette span {
@@ -23058,6 +23057,22 @@ header::before {
   font-size: 15px;
   margin: 0;
   padding: 0;
+}
+
+.triplette:hover {
+  background: #cda45e;
+}
+
+.triplette:hover span, .triplette:hover h4, .triplette:hover .h4, .triplette:hover p {
+  color: #fff;
+}
+
+.triplette div {
+  transition: all 1s ease-in-out;
+}
+
+.triplette:hover div {
+  transform: translateY(-10px);
 }
 
 /*# sourceMappingURL=style.css.map */
