--- a/src/sass/modules/_whyUs.scss
+++ b/src/sass/modules/_whyUs.scss
@@ -9,7 +9,7 @@
     padding-bottom: 40px;
 }
 
-#whyUs .title p {
+.title p {
     font-size: 36px;
     font-weight: 700;
     font-family: "Playfair Display", serif;
@@ -17,7 +17,7 @@
     margin: 0px;
 }
 
-#whyUs .title h2 {
+.title h2 {
     font-size: 14px;
     font-weight: 500;
     line-height: 1px;
@@ -29,10 +29,10 @@
     margin: 0px 0px 5px;
 }
 
-#whyUs .title h2::after {
+.title h2::after {
     content: "";
     width: 120px;
-    height: 1px;
+    height: 1.5px;
     display: inline-block;
     background: rgba(255, 255, 255, 0.2);
     margin: 4px 10px;
