--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21272,11 +21272,67 @@ textarea.form-control-lg {
 
 #div3Menu {
   position: relative;
+  height: 600px;
+}
+
+.carte {
+  position: absolute;
+  margin-top: 50px;
+  width: 50%;
+}
+
+.imgDiv3 {
+  width: 70px;
+  border-radius: 50%;
+  float: left;
+  border: 5px solid rgba(255, 255, 255, 0.2);
 }
 
 .plat {
+  margin-left: 85px;
+  overflow: hidden;
+  display: flex;
+  justify-content: space-between;
+  position: relative;
+}
+
+.plat a {
+  padding-right: 10px;
+  background: #1a1814;
+  position: relative;
+  z-index: 3;
+  font-weight: 700;
+  color: white;
+  transition: 0.3s;
+  text-decoration: none;
+}
+
+.plat span {
+  background: #1a1814;
+  position: relative;
+  z-index: 3;
+  padding: 0 10px;
+  font-weight: 600;
+  color: #cda45e;
+}
+
+.plat::after {
+  content: "......................................................................" "...................................................................." "....................................................................";
   position: absolute;
-  margin-top: 50px;
+  left: 20px;
+  right: 0;
+  top: -4px;
+  z-index: 1;
+  color: #bab3a6;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+}
+
+.composition {
+  margin-left: 85px;
+  font-style: italic;
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  color: rgba(255, 255, 255, 0.5);
 }
 
 * {
