--- a/src/sass/modules/_bootstrap.scss
+++ b/src/sass/modules/_bootstrap.scss
@@ -2,6 +2,14 @@
     width: 1320px;
 }
 
+.d-none {
+    display: none;
+}
+
+.d-flex {
+    display: flex;
+}
+
 .w-25 {
     width: 25% !important;
 }
