--- a/src/sass/modules/_specials.scss
+++ b/src/sass/modules/_specials.scss
@@ -2,3 +2,79 @@
     padding-top: 4%;
     padding-bottom: 4%;
 }
+
+#specials #divSpecials {
+    display: flex;
+}
+
+#leftSpecials {
+    width: 28%;
+}
+
+#leftSpecials ul {
+    border: 0;
+    flex-direction: column;
+}
+
+#leftSpecials li {
+    list-style: none;
+    transition: 0.3s
+}
+
+#leftSpecials li:hover a {
+    color: $orangeux;
+}
+
+#leftSpecials li a {
+    color: white;
+    border: 0;
+    padding: 12px 15px;
+    transition: 0.3s;
+    border-radius: 0;
+    border-right: 2px solid #cda45e;
+    font-weight: 600;
+    font-size: 15px;
+}
+
+#leftSpecials li a:active {
+    color: #1a1814;
+    background: #cda45e;
+    border-color: #cda45e;
+}
+
+.activeTab .designTab h3{
+    font-size: 26px;
+    font-weight: 600;
+    margin-bottom: 20px;
+    color: #fff;
+}
+
+.activeTab .designTab p{
+    color: #aaaaaa;
+}
+
+.activeTab .designTab p:nth-child(2){
+    color: #aaaaaa;
+    font-style: italic;
+}
+
+.imgTab {
+    text-align: center;
+}
+
+.imgOfimgTab {
+    max-width: 100%;
+    height: auto;
+}
+
+#rightSpecials {
+    width: 70%;
+}
+
+#rightSpecials .englobeSpecials{
+    display: flex;
+}
+
+.englobeSpecials {
+    padding-left: 2%;
+}
