--- a/src/sass/modules/_bootstrap.scss
+++ b/src/sass/modules/_bootstrap.scss
@@ -10,6 +10,23 @@
     display: flex;
 }
 
+.d-block {
+    display: block;
+}
+
+.nav-link {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    margin-right: 1rem;
+    line-height: 1.25;
+    text-decoration: none;
+    background-color: transparent;
+    border: 1px solid transparent;
+    border-radius: 0.25rem;
+    width: 100%;
+}
+
+
 .w-25 {
     width: 25% !important;
 }
