--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23274,4 +23274,35 @@ header::before {
   color: #1a1814 !important;
 }
 
+#events {
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+
+#arrowBtn {
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  font-size: 18px;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+#arrowBtn:hover i {
+  background: #cda45e;
+  color: #1a1814;
+}
+
+#arrowBtn i {
+  font-size: 16px;
+  color: #cda45e;
+  border-radius: 50%;
+  padding: 15px;
+  border: 2px solid #cda45e;
+}
+
 /*# sourceMappingURL=style.css.map */
