--- a/src/sass/modules/_events.scss
+++ b/src/sass/modules/_events.scss
@@ -1,5 +1,155 @@
 #events {
     padding-top: 4%;
-    padding-bottom: 4%;
+    padding-bottom: 6%;
+    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../../../public/img/events-bg.jpg');
+    background-attachment: fixed;
 }
 
+.section5-bas {
+    height: 80%;
+    width: 100%;
+    display: flex;
+}
+
+.slider,
+.slider .imgs {
+    width: 100%;
+    height: 100%;
+    max-height: 300px;
+    position: relative;
+}
+
+.slider {
+    height: 800px;
+}
+
+.slider .imgs {
+    display: flex;
+    overflow: hidden;
+}
+
+.slider .img {
+    min-width: 100%;
+    height: 100%;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    position: absolute;
+    left: 100%;
+    animation: 0.6s cubic-bezier(0.645, 0.045, 0.355, 1) 0s left;
+    animation-fill-mode: forwards;
+    background-size: cover !important;
+    background-position: 50% !important;
+}
+
+.dots {
+    position: absolute;
+    bottom: -40px;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.dot {
+    width: 12px;
+    height: 12px;
+    background: gray;
+    border-radius: 50%;
+    margin: 0 3px;
+    cursor: pointer;
+}
+
+.active-dot {
+    background: $orangeux;
+    cursor: default;
+}
+
+@keyframes leftNext {
+    from {
+        left: 200%;
+    }
+
+    to {
+        left: 0;
+    }
+}
+
+@keyframes leftCurr {
+    from {
+        left: 0;
+    }
+
+    to {
+        left: -200%;
+    }
+}
+
+@keyframes rightNext {
+    from {
+        left: -200%;
+    }
+
+    to {
+        left: 0;
+    }
+}
+
+@keyframes rightCurr {
+    from {
+        left: 0;
+    }
+
+    to {
+        left: 200%;
+    }
+}
+
+.section5-test {
+    display: flex;
+    justify-content: space-between;
+}
+
+.section5-img {
+    height: 150%;
+    width: 50%;
+}
+
+.section5-img img {
+    height: 500px;
+    width: 500px;
+    object-fit: cover;
+}
+
+.section5-text {
+    height: 100%;
+    width: 50%;
+    margin-top: 200px;
+}
+
+.section5-text h3 {
+    font-weight: 600;
+    font-size: 26px;
+    color: #cda45e;
+}
+
+.price {
+    font-size: 26px;
+    font-family: "Open Sans", sans-serif;
+    font-weight: 700;
+    margin-bottom: 15px;
+}
+
+.price p {
+    margin-bottom: 0;
+}
+
+.price span {
+    border-bottom: 2px solid #cda45e;
+}
+
+.italicPara {
+    font-style: italic;
+}
