--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23453,4 +23453,68 @@ header::before {
   padding-bottom: 4%;
 }
 
+.form-style-9 ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+.form-style-9 ul li {
+  display: block;
+  margin-bottom: 10px;
+  min-height: 35px;
+}
+
+.form-style-9 ul li .field-style {
+  border: 1px solid #625b4b;
+  padding: 8px;
+  outline: none;
+  background-color: transparent;
+}
+
+.form-style-9 ul li .field-style:focus {
+  border: 1px solid #cda45e;
+}
+
+.form-style-9 ul li input::placeholder,
+.form-style-9 ul li textarea::placeholder {
+  color: #625b4b;
+}
+
+.form-style-9 ul li .field-split {
+  width: 32.5%;
+  margin: 0.5%;
+  margin-left: 0%;
+}
+
+.form-style-9 ul li .field-full {
+  width: 99.1%;
+}
+
+.form-style-9 ul li input.align-left {
+  float: left;
+}
+
+.form-style-9 ul li input.align-right {
+  float: right;
+}
+
+.form-style-9 ul li textarea {
+  width: 100%;
+  height: 100px;
+}
+
+#submitResa input[type=button],
+#submitResa input[type=submit] {
+  background: #cda45e;
+  padding: 10px 35px;
+  color: #fff;
+  border-radius: 50px;
+  text-align: center;
+}
+
+#submitResa {
+  text-align: center;
+}
+
 /*# sourceMappingURL=style.css.map */
