--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21373,11 +21373,10 @@ header {
 header::before {
   content: "";
   position: absolute;
-  background: url("../../../public/img/hero-bg.jpg") top center;
+  background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../public/img/hero-bg.jpg") top center;
   background-size: cover;
   width: 100%;
   height: 101vh;
-  filter: brightness(50%);
 }
 
 #firstDiv {
@@ -21403,16 +21402,25 @@ header::before {
   color: #cda45e;
 }
 
+.sticky {
+  position: fixed !important;
+  top: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.8) !important;
+}
+
 .topnav {
   padding-left: 38px;
   padding-right: 25px;
   position: relative;
+  width: 100%;
   overflow: hidden;
   background-color: rgba(0, 0, 0, 0.608);
   display: flex;
   justify-content: space-around;
   align-items: center;
   height: 80px;
+  z-index: 10;
 }
 
 .topnav h1, .topnav .h1 {
@@ -21722,6 +21730,14 @@ header::before {
 
 .container {
   width: 1320px;
+}
+
+.container-fluid, .container-sm, .container-md, .container-lg, .container-xl, .container-xxl {
+  width: 100%;
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .d-none {
@@ -23515,6 +23531,17 @@ header::before {
 
 #submitResa {
   text-align: center;
+}
+
+#testimonials {
+  padding-top: 4%;
+  padding-bottom: 4%;
+  background-color: #1a1814;
+}
+
+#gallery {
+  padding-top: 4%;
+  padding-bottom: 4%;
 }
 
 /*# sourceMappingURL=style.css.map */
