--- a/src/sass/modules/_bootstrap.scss
+++ b/src/sass/modules/_bootstrap.scss
@@ -2,6 +2,14 @@
     width: 1320px;
 }
 
+.container-fluid {
+    width: 100%; 
+    padding-right: 15px; 
+    padding-left: 15px; 
+    margin-right: auto; 
+    margin-left: auto;
+}
+
 .d-none {
     display: none;
 }
