--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -32,11 +32,10 @@ header {
 header::before {
     content: '';
     position: absolute;
-    background: url('../../../public/img/hero-bg.jpg') top center;
+    background: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url('../../../public/img/hero-bg.jpg') top center;
     background-size: cover;
     width: 100%;
     height: 101vh;
-    filter: brightness(50%);
 }
 
 #firstDiv {
@@ -62,16 +61,25 @@ header::before {
     color: $orangeux;
 }
 
+.sticky {
+    position: fixed!important;
+    top: 0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.8)!important;
+}
+
 .topnav {
     padding-left: 38px;
     padding-right: 25px;
     position: relative;
+    width: 100%;
     overflow: hidden;
     background-color: rgba(0, 0, 0, 0.608);
     display: flex;
     justify-content: space-around;
     align-items: center;
     height: 80px;
+    z-index: 10;
 }
 
 .topnav h1 {
