--- a/src/sass/modules/_style.scss
+++ b/src/sass/modules/_style.scss
@@ -8,3 +8,5 @@
 @import './_events.scss';
 @import './_arrow.scss';
 @import './_reservation.scss';
+@import './_testimonials.scss';
+@import './_gallery.scss';
