--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21656,7 +21656,7 @@ header::before {
   background-attachment: fixed;
   background-image: linear-gradient(to right, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url("../../../public/img/about-bg.jpg");
   color: white;
-  padding-top: 5%;
+  padding-top: 10%;
   padding-bottom: 5%;
 }
 
@@ -21762,6 +21762,11 @@ header::before {
   border: 1px solid transparent;
   border-radius: 0.25rem;
   width: 100%;
+}
+
+.img-fluid {
+  max-width: 100%;
+  height: auto;
 }
 
 .w-25 {
@@ -23542,6 +23547,26 @@ header::before {
 #gallery {
   padding-top: 4%;
   padding-bottom: 4%;
+}
+
+#groupPics {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.picsSolo {
+  overflow: hidden;
+  border-right: 3px solid #454035;
+  border-bottom: 3px solid #454035;
+  width: 25%;
+}
+
+.picsSolo img {
+  transition: all ease-in-out 0.4s;
+}
+
+.picsSolo:hover img {
+  transform: scale(1.1);
 }
 
 /*# sourceMappingURL=style.css.map */
