--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23569,4 +23569,95 @@ header::before {
   transform: scale(1.1);
 }
 
+#chefs {
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+
+#chefzers {
+  display: flex;
+  gap: 20px;
+}
+
+.groupEgerie {
+  text-align: center;
+  margin-bottom: 20px;
+  position: relative;
+  overflow: hidden;
+}
+
+.egerie {
+  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: 0.2s;
+}
+
+.egerieContent {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 40px;
+  transition: bottom 0.4s;
+}
+
+.egerie:hover {
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.9) 0%, rgba(0, 0, 0, 0.8) 20%, rgba(0, 212, 255, 0) 100%);
+  opacity: 1;
+  transition: 0.4s;
+  animation: moveUp 0.5s ease-in-out;
+}
+
+.egerieContent h4, .egerieContent .h4 {
+  font-weight: 700;
+  margin-bottom: 2px;
+  font-size: 18px;
+  color: #fff;
+}
+
+.egerieContent span {
+  font-style: italic;
+  display: block;
+  font-size: 13px;
+  color: #fff;
+}
+
+.egerieSocial {
+  position: absolute;
+  left: 0;
+  bottom: -15px;
+  right: 0;
+  height: 48px;
+  transition: bottom ease-in-out 0.4s;
+  text-align: center;
+}
+
+.egerieSocial a {
+  transition: color 0.3s;
+  color: #fff;
+  margin: 0 10px;
+  display: inline-block;
+}
+
+.egerieSocial i {
+  font-size: 18px;
+  margin: 0 2px;
+}
+
+.egerieSocial i:hover {
+  color: #cda45e;
+}
+
+@keyframes moveUp {
+  0% {
+    transform: translateY(100%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
+}
+
 /*# sourceMappingURL=style.css.map */
