--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21419,12 +21419,13 @@ header::before {
   display: flex;
   justify-content: space-around;
   align-items: center;
-  height: 80px;
+  height: 75px;
   z-index: 10;
 }
 
 .topnav h1, .topnav .h1 {
   color: white;
+  font-family: "Poppins";
 }
 
 .topnav a {
@@ -23487,6 +23488,7 @@ header::before {
 }
 
 .form-style-9 ul li .field-style {
+  color: white;
   border: 1px solid #625b4b;
   padding: 8px;
   outline: none;
@@ -23658,6 +23660,51 @@ header::before {
   100% {
     transform: translateY(0%);
   }
+}
+#contact {
+  padding-top: 4%;
+  padding-bottom: 4%;
+}
+
+#concontact {
+  display: flex;
+  margin-top: 3rem;
+}
+
+#info {
+  width: 100%;
+}
+
+#info i {
+  font-size: 20px;
+  float: left;
+  width: 44px;
+  height: 44px;
+  background: #cda45e;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50px;
+  transition: all 0.3s ease-in-out;
+}
+
+#info h4, #info .h4 {
+  padding: 0 0 0 60px;
+  font-size: 18px;
+  font-weight: 500;
+  margin-bottom: 5px;
+  font-family: "Poppins", sans-serif;
+}
+
+#info p {
+  padding: 0 0 0 60px;
+  margin-bottom: 0;
+  font-size: 14px;
+  color: #bab3a6;
+}
+
+.openHours, .email, .phone {
+  margin-top: 40px;
 }
 
 /*# sourceMappingURL=style.css.map */
