--- a/src/sass/modules/_reservation.scss
+++ b/src/sass/modules/_reservation.scss
@@ -14,6 +14,7 @@
 	min-height: 35px;
 }
 .form-style-9 ul li  .field-style{
+    color: white;
     border: 1px solid #625b4b;
 	padding: 8px;
 	outline: none;
