--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21791,7 +21791,7 @@ footer {
   margin-bottom: 30px;
 }
 
-.footerTop .footerLinks h4, .footerTop .footerLinks .h4 {
+.footerTop h4, .footerTop .h4 {
   font-size: 16px;
   font-weight: 600;
   color: #fff;
@@ -21828,6 +21828,38 @@ footer {
   display: inline-block;
   line-height: 1;
   text-decoration: none;
+}
+
+.footerNews form {
+  margin-top: 30px;
+  background: #28251f;
+  padding: 6px 10px;
+  position: relative;
+  border-radius: 50px;
+  border: 1px solid #454035;
+}
+
+.footerNews form input[type=email] {
+  border: 0;
+  padding: 4px;
+  width: calc(100% - 110px);
+  background: #28251f;
+  color: white;
+}
+
+.footerNews form input[type=submit] {
+  position: absolute;
+  top: -1px;
+  right: -1px;
+  bottom: -1px;
+  border: 0;
+  background: none;
+  font-size: 16px;
+  padding: 0 20px 2px 20px;
+  background: #cda45e;
+  color: #fff;
+  transition: 0.3s;
+  border-radius: 50px;
 }
 
 .container {
