--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -13,6 +13,7 @@ footer {
 
 .footerTop .footerInfo {
     margin-bottom: 30px;
+    width: 35%;
 }
 
 .footerTop .footerInfo h3 {
@@ -58,7 +59,7 @@ footer {
 
 .footerTop .footerLinks {
     margin-bottom: 30px;
-    width: 22%;
+    width: 30%;
 }
 
 .footerTop h4 {
@@ -130,4 +131,10 @@ footer {
     color: #fff;
     transition: 0.3s;
     border-radius: 50px;
+}
+
+footer .copyright {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 20px;
 }
