--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -392,6 +392,17 @@ header #modalOne #button {
     cursor: pointer;
 }
 
+#toggle-dark-mode-btn {
+    color: white;
+    background-color: transparent;
+    border: 2px solid #cda45e;
+    border-radius: 50%;
+}
+
+#toggle-dark-mode-btn i {   
+    padding: 10px;
+}
+
 // Media Queries
 // Navbar
 @media screen and (max-width: 768px) {
