--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21737,7 +21737,7 @@ header #modalOne #button {
   padding: 10px;
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 1024px) {
   .topnav a {
     display: none;
   }
@@ -21747,11 +21747,16 @@ header #modalOne #button {
   .topnav button {
     display: none;
   }
+  .topnav #toggle-dark-mode-btn {
+    display: none;
+  }
   .topnav a.icon {
     display: block;
   }
   .topnav.responsive {
     position: relative;
+    height: 100%;
+    display: block;
   }
   .topnav.responsive .icon {
     position: absolute;
@@ -21761,11 +21766,26 @@ header #modalOne #button {
   .topnav.responsive a {
     float: none;
     display: block;
-    text-align: left;
+  }
+  .topnav.responsive #btnNavMov {
+    display: flex;
+    justify-content: center;
+    gap: 2%;
+    padding-bottom: 2%;
   }
   .topnav.responsive button {
     float: none;
     display: block;
+  }
+  .topnav.topnav.responsive #toggle-dark-mode-btn {
+    float: none;
+    display: block;
+  }
+}
+@media (min-width: 425px) and (max-width: 768px) {
+  #but2Div3 {
+    margin-left: 0 !important;
+    margin-top: 2%;
   }
 }
 #about {
