--- a/src/sass/modules/_whyUs.scss
+++ b/src/sass/modules/_whyUs.scss
@@ -84,3 +84,16 @@
 .triplette:hover div {
     transform: translateY(-15px);
 }
+
+@media screen and (max-width: 768px) {
+    #groupette {
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .triplette {
+        width: 100%;
+        margin-bottom: 2%;
+    }
+}
