--- a/src/sass/modules/_specials.scss
+++ b/src/sass/modules/_specials.scss
@@ -80,3 +80,24 @@
 .active a {
     color: #1a1814!important;
 }
+
+@media screen and (max-width: 768px) {
+    #divSpecials {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    #leftSpecials {
+        width: 100%;
+    }
+
+    #leftSpecials li a {
+        border-right: 0;
+    }
+
+    #leftSpecials li a {
+        border-bottom: 2px solid #cda45e;
+    }
+}
