--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23887,6 +23887,13 @@ footer .copyright {
   text-align: center;
 }
 
+@media screen and (max-width: 991px) {
+  .form-style-9 ul li .field-split {
+    width: 32.1%;
+    margin: 0.5%;
+    margin-left: 0%;
+  }
+}
 #testimonials {
   padding-top: 4%;
   padding-bottom: 4%;
