--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23991,6 +23991,21 @@ footer .copyright {
   background-color: #cda45e;
 }
 
+@media screen and (max-width: 992px) {
+  .section7-row {
+    width: 700%;
+    display: flex;
+  }
+}
+@media (min-width: 993px) and (max-width: 1400px) {
+  .section7-elem {
+    height: 500px;
+  }
+  .section7-name {
+    position: absolute;
+    bottom: -85%;
+  }
+}
 #gallery {
   padding-top: 4%;
   padding-bottom: 4%;
