--- a/src/sass/modules/_chefs.scss
+++ b/src/sass/modules/_chefs.scss
@@ -88,3 +88,20 @@
         transform: translateY(0%);
     }
 }
+
+@media screen and (max-width: 970px) {
+    #chefzers {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .cardChefs {
+        width: 70%;
+    }
+
+    .groupEgerie {
+        margin-bottom: 10px;
+    }
+}
