--- a/src/sass/modules/_footer.scss
+++ b/src/sass/modules/_footer.scss
@@ -138,3 +138,8 @@ footer .copyright {
     padding-top: 30px;
     padding-bottom: 20px;
 }
+
+// Media queries
+@media screen and (max-width: 991px) {
+    
+}
