--- a/src/sass/modules/_contact.scss
+++ b/src/sass/modules/_contact.scss
@@ -68,3 +68,9 @@
 #rightContact #textArea {
     height: 180px;
 }
+
+@media screen and (max-width: 991px) {
+    #rightContact .field-split {
+        width: 48.4%;
+    }
+}
