--- a/src/sass/modules/_events.scss
+++ b/src/sass/modules/_events.scss
@@ -158,7 +158,11 @@
     .section5-test {
         display: flex;
         flex-direction: column;
-        height: 100%;
+    }
+
+    .section5-text {
+        width: 100%;
+        font-size: 13px;
     }
 }
 
@@ -167,6 +171,7 @@
         display: flex;
         flex-direction: column;
     }
+
     .section5-text {
         width: 100%;
     }
