--- a/src/sass/modules/_header.scss
+++ b/src/sass/modules/_header.scss
@@ -408,6 +408,10 @@ header #modalOne #button {
     background-color: #cda45e;
 }
 
+.navLink.posey {
+    color: #cda45e;
+}
+
 // Media Queries
 // Navbar
 @media screen and (max-width: 1024px) {
