--- a/src/sass/modules/_gallery.scss
+++ b/src/sass/modules/_gallery.scss
@@ -22,3 +22,17 @@
 .picsSolo:hover img {
     transform: scale(1.1);
 }
+
+@media screen and (max-width: 850px) {
+    #groupPics{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    .picsSolo {
+        width: 60%;
+        border: 3px solid #454035;
+        margin: 0.5%;
+    }
+}
