--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21798,12 +21798,19 @@ header #modalOne #button {
   }
 }
 @media screen and (max-width: 426px) {
+  .container {
+    width: 100% !important;
+  }
   #div3 {
-    display: block;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  #midText {
+    text-align: center;
   }
   #divPlayBtn {
-    display: flex;
-    justify-content: center;
+    padding-top: 3%;
   }
 }
 #about {
