--- a/src/sass/modules/_menu.scss
+++ b/src/sass/modules/_menu.scss
@@ -91,3 +91,15 @@ $orangeux: #cda45e;
     font-family: "Poppins", sans-serif;
     color: rgba(255, 255, 255, 0.5);
 }
+
+@media screen and (max-width: 426px) {
+    #menu {
+        padding-top: 6%;
+    }
+    #div3Menu {
+        flex-direction: column;
+    }
+    .carte {
+        width: 100%;
+    }
+}
