--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23710,6 +23710,14 @@ footer .copyright {
     border-bottom: 2px solid #cda45e;
   }
 }
+@media screen and (max-width: 426px) {
+  #specials {
+    padding-top: 6%;
+  }
+  .englobeSpecials {
+    flex-direction: column;
+  }
+}
 #events {
   padding-top: 4%;
   padding-bottom: 6%;
