reservation mq done

--- a/src/sass/modules/_reservation.scss
+++ b/src/sass/modules/_reservation.scss
@@ -66,3 +66,9 @@
         margin-left: 0%;
     }
 }
+
+@media screen and (max-width: 426px) {
+    #reservation {
+        padding-top: 15%;
+    }
+}
