--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23885,6 +23885,11 @@ footer .copyright {
     width: 100%;
   }
 }
+@media screen and (max-width: 426px) {
+  #events {
+    padding-top: 6%;
+  }
+}
 #arrowBtn {
   display: none;
   position: fixed;
@@ -23987,6 +23992,11 @@ footer .copyright {
     width: 32.1%;
     margin: 0.5%;
     margin-left: 0%;
+  }
+}
+@media screen and (max-width: 426px) {
+  #reservation {
+    padding-top: 15%;
   }
 }
 #testimonials {
