--- a/src/sass/modules/_testimonials.scss
+++ b/src/sass/modules/_testimonials.scss
@@ -111,3 +111,13 @@
         bottom: -85%;
     }
 }
+
+@media screen and (max-width: 426px) {
+    #testimonials {
+        padding-top: 6%;
+    }
+    .section7-name {
+        position: absolute;
+        bottom: -60%!important;
+    }
+}
